...
            </objects>
            <point key="canvasLocation" x="1110" y="136.26760563380282"/>
        </scene>
        <!--Login View Controller-->
        <scene sceneID="ugt-4V-adM">
            <objects>
                <viewController storyboardIdentifier="Login" id="VFj-wt-fBu" customClass="LoginViewController" customModule="FlightRider" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" tag="5" contentMode="scaleToFill" id="Crr-2X-DWt">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember me" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vbR-zZ-n8z" custom
                                <rect key="frame" x="31.5" y="394.5" width="257" height="18"/>
...
                                        <constraints>
                                            <constraint firstAttribute="height" constant="37" id="CSA-OS-oPY">
                                                <variation key="heightClass=regular-widthClass=regular" constant="67"/>
                                            </constraint>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="18"/>
                                        <state key="normal" title="Update"/>
                                        <variation key="heightClass=regular-widthClass=regular">
                                            <fontDescription key="fontDescription" name="OpenSans-Regular" family="Open Sans" pointSize="35"/>
                                        </variation>
                                        <connections>
                                            <action selector="updateSeats:" destination="LPR-cS-W7X" eventType="touchUpInside" id="fxY-Pz-Q3h"/>
                                        </connections>
...
